// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:list 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  单选
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-items"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-item"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
                >
                  Option A
                </div>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-item"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
                >
                  Option B
                </div>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-item"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-itemImage"
                >
                  <img
                    alt="OptionC"
                    src="https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=3893101144,2877209892&fm=23&gp=0.jpg"
                  />
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
                >
                  OptionC
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:list:multiple clearable 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-items"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-item is-active"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
                >
                  Option A
                </div>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-item"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
                >
                  Option B
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
              >
                a
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:list:multiple clearable 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-items"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-item is-active"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
                >
                  Option A
                </div>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-item is-active"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
                >
                  Option B
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
              >
                a,b
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:list:multiple clearable 3`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-items"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-item is-active"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
                >
                  Option A
                </div>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-item"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
                >
                  Option B
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
              >
                a
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
